tests/baselines/reference/indexWithoutParamType.errors.txt
indexWithoutParamType.ts(1,10): error TS1096: An index signature must have exactly one parameter.


==== indexWithoutParamType.ts (1 errors) ====
    var y: { []; } // Error
             ~~~
!!! error TS1096: An index signature must have exactly one parameter.